Fix JWS handling.
