# src/UIAPIServer/api.yaml
@@ -588,27 +588,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/DFSPJWSCert"
       x-swagger-router-controller: DfspJWS
-    put:
-      tags:
-        - DFSP-jws-certificates-configuration
-      summary: update JWS certificate
-      description: TBD
-      operationId: updateDfspJwsCerts
-      requestBody:
-        description: Certificate
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BaseJWSCert'
-      responses:
-        "200":
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/JWSCert"
-      x-swagger-router-controller: DfspJWSCerts
     delete:
       tags:
         - DFSP-jws-certificates-configuration
@@ -631,7 +610,7 @@ paths:
       operationId: createDfspJwsCerts
       requestBody:
         description: Certificate
-        required: true
+        required: false
         content:
           application/json:
             schema:
